06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Quarter_With_Year__c.field-meta.xml
<CustomField>
    <fullName>Quarter_With_Year__c</fullName>
    <formula>TEXT(Compliance_Year__c) + &quot; &quot; + TEXT(Quarter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter With Year</label>
    <type>Text</type>
</CustomField>