06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Reason_for_Resubmission__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Resubmission__c</fullName>
    <label>Reason for Resubmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>