06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Resubmission__c.field-meta.xml
<CustomField>
    <fullName>Resubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmission</label>
    <type>Checkbox</type>
</CustomField>