06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Resubmission_Requested__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmission Requested</label>
    <type>Checkbox</type>
</CustomField>