06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Show_Acknowledgement_PopUp__c.field-meta.xml
<CustomField>
    <fullName>Show_Acknowledgement_PopUp__c</fullName>
    <formula>AND(
  OR(
    ISPICKVAL(Status__c, &quot;Waiting for Market Data&quot;),
    ISPICKVAL(Status__c, &quot;Ready to Acknowledge&quot;)
  ),
  Weights_Entered__c = TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Acknowledgement PopUp</label>
    <type>Checkbox</type>
</CustomField>