06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Show_Popup_For_Validation_Question__c.field-meta.xml
<CustomField>
    <fullName>Show_Popup_For_Validation_Question__c</fullName>
    <formula>Unanswered_Questions__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Popup For Validation Question</label>
    <type>Checkbox</type>
</CustomField>