06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Show_Signature_Popup__c.field-meta.xml
<CustomField>
    <fullName>Show_Signature_Popup__c</fullName>
    <formula>AND(
Show_Acknowledgement_PopUp__c = FALSE,
Show_Popup_For_Validation_Question__c = FALSE,
ISPICKVAL(Status__c, &quot;Pending Director Review&quot;),
OR(
  $Profile.Name = &quot;Producer Director User&quot;,
  $Profile.Name = &quot;Producer Director User Login&quot;,
  $Profile.Name = &quot;RLCC - RLCS Producer Director&quot;
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Signature Popup</label>
    <type>Checkbox</type>
</CustomField>