06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Auto-calculated status field that provides granular status indicators for Producer Portal users. Updated by the Producer POM - Update Status flow.</description>
    <inlineHelpText>Current status of this POM record. This field is automatically updated based on acknowledgement, questions, and signature status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Market Data</fullName>
                <default>true</default>
                <label>Waiting for Market Data</label>
            </value>
            <value>
                <fullName>Ready to Acknowledge</fullName>
            </value>
            <value>
                <fullName>Acknowledge Market Data</fullName>
            </value>
            <value>
                <fullName>Questions Required</fullName>
            </value>
            <value>
                <fullName>Pending Director Review</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>