06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Transaction_Data__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Data__c</fullName>
    <label>Transaction Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchases</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>