06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(OR(RecordType.Name == &quot;Household&quot;, RecordType.Name == &quot;Household &amp; Non-Household&quot;, RecordType.Name ==&quot;Non-Household&quot;), &quot;WEEE&quot;, RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>