06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Unanswered_Questions__c.field-meta.xml
<CustomField>
    <fullName>Unanswered_Questions__c</fullName>
    <label>Unanswered Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>