06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Vape_Batteries_All_Full_Industrial__c.field-meta.xml
<CustomField>
    <fullName>Vape_Batteries_All_Full_Industrial__c</fullName>
    <label>Vape Batteries All Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>