06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Visible_To_Producer_User__c.field-meta.xml
<CustomField>
    <fullName>Visible_To_Producer_User__c</fullName>
    <description>ADDMONTHS(Quarter_Start_Date__c, 3) &lt;= TODAY() &amp;&amp;</description>
    <formula>Quarter_Start_Date__c &lt;= TODAY() &amp;&amp;
OR(
(RecordType.Name == &quot;Household&quot; &amp;&amp; INCLUDES(Account__r.Producer_Contract_Obligation_Types__c, &quot;Household&quot;)),
(RecordType.Name == &quot;Non-Household&quot; &amp;&amp; INCLUDES(Account__r.Producer_Contract_Obligation_Types__c, 
&quot;Non-Household&quot;)),
(RecordType.Name == &quot;Household &amp; Non-Household&quot; &amp;&amp; INCLUDES(Account__r.Producer_Contract_Obligation_Types__c, &quot;Household &amp; Non-Household&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visible To Producer User</label>
    <type>Checkbox</type>
</CustomField>