06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/WEEE_collections_undertaken__c.field-meta.xml
<CustomField>
    <fullName>WEEE_collections_undertaken__c</fullName>
    <label>WEEE collections undertaken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>