06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/WEEE_PRN__c.field-meta.xml
<CustomField>
    <fullName>WEEE_PRN__c</fullName>
    <formula>Account__r.Producer_Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEEE PRN</label>
    <type>Text</type>
</CustomField>