06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Weight_Source__c.field-meta.xml
<CustomField>
    <fullName>Weight_Source__c</fullName>
    <label>Weight Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>