06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Weights_Entered__c.field-meta.xml
<CustomField>
    <fullName>Weights_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weights Entered?</label>
    <type>Checkbox</type>
</CustomField>