06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/recordTypes/Batteries.recordType-meta.xml
<RecordType>
    <fullName>Batteries</fullName>
    <active>true</active>
    <label>Batteries</label>
</RecordType>