06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <label>Household</label>
</RecordType>