06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/recordTypes/Household_Non_Household.recordType-meta.xml
<RecordType>
    <fullName>Household_Non_Household</fullName>
    <active>true</active>
    <label>Household &amp; Non-Household</label>
</RecordType>