06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/recordTypes/Non_Household.recordType-meta.xml
<RecordType>
    <fullName>Non_Household</fullName>
    <active>true</active>
    <label>Non-Household</label>
</RecordType>