06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/validationRules/Force_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Positive_Value</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Category_1_Household__c &lt; 0,
    Category_2_Household__c &lt; 0,
    Category_3_Household__c &lt; 0,
    Category_4_Household__c &lt; 0,
    Category_5_Household__c &lt; 0,
    Category_6_Household__c &lt; 0,
    Category_7_Household__c &lt; 0,
    Category_8_Household__c &lt; 0,
    Category_9_Household__c &lt; 0,
    Category_10_Household__c &lt; 0,
    Category_11_Household__c &lt; 0,
    Category_12_Household__c &lt; 0,
    Category_13_Household__c &lt; 0,
    Category_14_Household__c &lt; 0,
    Category_15_Household__c &lt; 0,
    Category_1_Non_Household__c &lt; 0,
    Category_2_Non_Household__c &lt; 0,
    Category_3_Non_Household__c &lt; 0,
    Category_4_Non_Household__c &lt; 0,
    Category_5_Non_Household__c &lt; 0,
    Category_6_Non_Household__c &lt; 0,
    Category_7_Non_Household__c &lt; 0,
    Category_8_Non_Household__c &lt; 0,
    Category_9_Non_Household__c &lt; 0,
    Category_10_Non_Household__c &lt; 0,
    Category_11_Non_Household__c &lt; 0,
    Category_12_Non_Household__c &lt; 0,
    Category_13_Non_Household__c &lt; 0,
    Category_14_Non_Household__c &lt; 0,
    Category_15_Non_Household__c &lt; 0
)</errorConditionFormula>
    <errorMessage>We are unable to save any record which contains a negative value, please review your entry.</errorMessage>
</ValidationRule>