06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/validationRules/prevent_Acknowledgement_of_Statements.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_Acknowledgement_of_Statements</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Is_Ready_To_Acknowledge__c) &amp;&amp; Acknowledgement_of_Statements__c</errorConditionFormula>
    <errorMessage>Category 1-15 Household should be filled before marking &quot;Acknowledgement of Statements&quot;.</errorMessage>
</ValidationRule>