06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/validationRules/prevent_customer_to_modified_signed_data.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_customer_to_modified_signed_data</fullName>
    <active>true</active>
    <errorConditionFormula>Internal_Verification_Complete__c = TRUE
&amp;&amp; NOT(ISCHANGED(Status__c))
&amp;&amp;  $User.ContactId &lt;&gt; NULL</errorConditionFormula>
    <errorMessage>This record is locked, no further changes can be made. For assistance, please contact us using Producers@RecyclingLives-Services.com.</errorMessage>
</ValidationRule>