06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/validationRules/Prevent_Data_Change_By_Portal_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Data_Change_By_Portal_User</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ContactId != null &amp;&amp;
Acknowledgement_of_Statements__c &amp;&amp;
OR(
    ISCHANGED(Category_1_Household__c),
    ISCHANGED(Category_2_Household__c),
    ISCHANGED(Category_3_Household__c),
    ISCHANGED(Category_4_Household__c),
    ISCHANGED(Category_5_Household__c),
    ISCHANGED(Category_6_Household__c),
    ISCHANGED(Category_7_Household__c),
    ISCHANGED(Category_8_Household__c),
    ISCHANGED(Category_9_Household__c),
    ISCHANGED(Category_10_Household__c),
    ISCHANGED(Category_11_Household__c),
    ISCHANGED(Category_12_Household__c),
    ISCHANGED(Category_13_Household__c),
    ISCHANGED(Category_14_Household__c),
    ISCHANGED(Category_15_Household__c),
    
    ISCHANGED(Category_1_Non_Household__c),
    ISCHANGED(Category_2_Non_Household__c),
    ISCHANGED(Category_3_Non_Household__c),
    ISCHANGED(Category_4_Non_Household__c),
    ISCHANGED(Category_5_Non_Household__c),
    ISCHANGED(Category_6_Non_Household__c),
    ISCHANGED(Category_7_Non_Household__c),
    ISCHANGED(Category_8_Non_Household__c),
    ISCHANGED(Category_9_Non_Household__c),
    ISCHANGED(Category_10_Non_Household__c),
    ISCHANGED(Category_11_Non_Household__c),
    ISCHANGED(Category_12_Non_Household__c),
    ISCHANGED(Category_13_Non_Household__c),
    ISCHANGED(Category_14_Non_Household__c),
    ISCHANGED(Category_15_Non_Household__c)
)</errorConditionFormula>
    <errorMessage>You cannot alter this data as it has already been marked as acknowledged. Please contact us using Producers@RecyclingLives-Services.com if there is a mistake.</errorMessage>
</ValidationRule>