06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/listViews/History.listView-meta.xml
<ListView>
    <fullName>History</fullName>
    <columns>NAME</columns>
    <columns>Quarter_With_Year__c</columns>
    <columns>Director_Sign_By__c</columns>
    <columns>Director_Sign_Date_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Signed</value>
    </filters>
    <label>History</label>
</ListView>