06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/listViews/Non_Household.listView-meta.xml
<ListView>
    <fullName>Non_Household</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Quarter_With_Year__c</columns>
    <columns>Quarter_Start_Date__c</columns>
    <columns>Acknowledgement_of_Statements__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Non-Household</value>
    </filters>
    <label>Non-Household</label>
</ListView>