06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/listViews/Past_Due.listView-meta.xml
<ListView>
    <fullName>Past_Due</fullName>
    <columns>NAME</columns>
    <columns>Quarter_With_Year__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Past_Due_List_View__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Waiting for Market Data</value>
    </filters>
    <label>Due Now</label>
</ListView>