06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/listViews/Signature_Required.listView-meta.xml
<ListView>
    <fullName>Signature_Required</fullName>
    <columns>NAME</columns>
    <columns>Quarter_With_Year__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Signature_Popup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Signature Required</label>
</ListView>