06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/listViews/Upcoming_Dates.listView-meta.xml
<ListView>
    <fullName>Upcoming_Dates</fullName>
    <columns>Action_Date__c</columns>
    <columns>Quarter_With_Year__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Dates</label>
</ListView>